--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "BerylBit (BRB)",
   "name": "BerylBit (BRB) Blockchain Explorer",
-  "start_url": ".",
+  "start_url": "https://cryptocamel.github.io/jeetscan-/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
