--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "BerylBit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cryptocamel.github.io/jeetscan-/",
+  "homepage": "https://github.com/cryptocamel/jeetscan-/tree/master",
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.3",
